# markets

./: .gitignore  CLAUDE.md  Makefile  README.md
backtester/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_with_mock.py
backtester/configs/: buy_and_hold_example.yaml  buy_and_hold_underlying_example.yaml  buy_and_hold_underlying_spy_1d.yaml  buy_and_hold_underlying_spy_1mo.yaml  buy_and_hold_underlying_spy_2y.yaml  buy_and_hold_underlying_spy_benchmark.yaml  covered_call_example.yaml  covered_call_example_quick.yaml  orb_5m_es_1mo.yaml  orb_5m_example.yaml  tactical_asset_allocation_example.yaml  trend_entry_trailing_stop_es_1mo.yaml  trend_entry_trailing_stop_example.yaml  trend_follow_risk_sized_1mo.yaml  trend_follow_risk_sized_example.yaml
backtester/runs/202603112204_SPY_1d_20190301_20260310/: orders.csv  report.html  run_manifest.json  summary.json
backtester/runs/202603112311_SPY_1m_20260102_20260102/: equity_curve.csv  fills.csv  orders.csv  report.html  run_manifest.json  summary.json  trades.csv
backtester/runs/202603112313_SPY_1d_20190301_20260310/: equity_curve.csv  fills.csv  report.html  run_manifest.json  summary.json  trades.csv
backtester/runs/showcase/: CASE_STUDY.md  equity_curve.csv  fills.csv  orders.csv  report.html  run_manifest.json  summary.json  trades.csv
backtester/src/: __init__.py  runner.py
backtester/src/broker/: __init__.py  broker.py  fee_model.py  fee_schedules.py  fill_model.py  trailing_stop.py
backtester/src/clock/: __init__.py  clock.py
backtester/src/domain/: __init__.py  bars.py  config.py  contract.py  contract_id.py  event.py  fill.py  futures.py  order.py  portfolio.py  position.py  quotes.py  snapshot.py
backtester/src/engine/: __init__.py  engine.py  result.py  strategy.py
backtester/src/loader/: __init__.py  config.py  provider.py
backtester/src/marketdata/: __init__.py  cli.py  config.py  symbols.py  symbols.yaml
backtester/src/portfolio/: __init__.py  accounting.py
backtester/src/reporter/: __init__.py  reporter.py  summary.py  trades.py  visualize.py
backtester/src/strategies/: __init__.py  strategizer_adapter.py
backtester/src/utils/: __init__.py  tick.py
backtester/tests/: strategizer_mock.py
backtester/tests/configs/: buy_and_hold.yaml  covered_call.yaml  trend_entry_trailing_stop.yaml  with_fees.yaml
backtester/tests/golden/: expected_buy_and_hold_equity.csv  expected_buy_and_hold_summary.json  expected_covered_call_fees_summary.json  expected_covered_call_summary.json  expected_covered_call_trades.csv  generate_golden.py
backtester/tests/integration/: conftest.py  strategizer_mock.py  test_broker.py  test_dataprovider.py  test_domain_clock.py  test_engine.py  (+11 more)
observer/backend/: config.example.yaml  pyproject.toml
portfolio/: README.md  pyproject.toml
portfolio/tests/: __init__.py  conftest.py  test_accounting.py  test_domain.py
strategizer/: .gitignore  README.md  pyproject.toml
strategizer/tests/: test_base.py  test_covered_call.py  test_orb_5m.py  test_protocol.py  test_tactical_asset_allocation.py  test_tick.py  test_trend_entry_trailing_stop.py  test_trend_follow_risk_sized.py  test_types.py
(+323 files in other folders)
