[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategizer"
version = "0.1.0"
description = "Shared strategy library for observer and backtester"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
authors = []
keywords = ["trading", "strategies", "backtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
